--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -10,6 +10,7 @@
     xmlns:helpers="using:GIMI_ModManager.WinUI.Helpers"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:GIMI_ModManager.WinUI.Models"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -141,7 +142,7 @@
             SelectionMode="None"
             StretchContentForSingleRow="False">
             <controls:AdaptiveGridView.ItemTemplate>
-                <DataTemplate x:DataType="entities:GenshinCharacter">
+                <DataTemplate x:DataType="models:CharacterGridItemModel">
                     <Grid
                         x:Name="itemThumbnail"
                         Padding="{StaticResource XSmallLeftTopRightBottomMargin}"
@@ -152,22 +153,31 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
+
+                            <Image VerticalAlignment="Top">
+                                <Image.Source>
+                                    <BitmapImage DecodePixelWidth="150" UriSource="{x:Bind Character.ImageUri}" />
+                                </Image.Source>
+                            </Image>
                             <FontIcon
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Top"
                                 Glyph="&#xE840;"
                                 Visibility="{x:Bind IsPinned, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}" />
-                            <Image VerticalAlignment="Top">
-                                <Image.Source>
-                                    <BitmapImage DecodePixelWidth="150" UriSource="{x:Bind ImageUri}" />
-                                </Image.Source>
-                            </Image>
+
+                            <FontIcon
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Top"
+                                FontSize="40"
+                                Foreground="Yellow"
+                                Glyph="&#xEC00;"
+                                Visibility="{x:Bind Warning, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}" />
                             <TextBlock
                                 Grid.Row="1"
                                 Margin="{StaticResource XXSmallTopMargin}"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
-                                Text="{x:Bind DisplayName}" />
+                                Text="{x:Bind Character.DisplayName}" />
                         </Grid>
                     </Grid>
                 </DataTemplate>
