--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -82,13 +82,24 @@
             <StackPanel
                 Grid.Column="0"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Center">
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
 
                 <TextBlock
                     HorizontalAlignment="Center"
                     FontSize="28"
                     Style="{StaticResource TitleTextBlockStyle}"
                     Text="Character Overview" />
+
+                <HyperlinkButton VerticalAlignment="Bottom" NavigateUri="https://gamebanana.com/games/8552">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0,0,8,0" Text="GameBanana" />
+                        <FontIcon FontSize="12" Glyph="&#xE8A7;" />
+                    </StackPanel>
+
+                </HyperlinkButton>
+
+
             </StackPanel>
 
             <StackPanel
@@ -120,8 +131,8 @@
                             Modifiers="Control" />
                     </AutoSuggestBox.KeyboardAccelerators>
                     <AutoSuggestBox.ItemTemplate>
-                        <DataTemplate x:DataType="entities:GenshinCharacter">
-                            <TextBlock Text="{x:Bind DisplayName}" />
+                        <DataTemplate x:DataType="models:CharacterGridItemModel">
+                            <TextBlock Text="{x:Bind Character.DisplayName}" />
                         </DataTemplate>
                     </AutoSuggestBox.ItemTemplate>
                 </AutoSuggestBox>
@@ -166,9 +177,10 @@
                                 Visibility="{x:Bind IsPinned, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}" />
 
                             <FontIcon
+                                Margin="-8"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
-                                FontSize="40"
+                                FontSize="60"
                                 Foreground="Yellow"
                                 Glyph="&#xEC00;"
                                 Visibility="{x:Bind Warning, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}" />
